--- a/index.html
+++ b/index.html
@@ -41,9 +41,9 @@
   <div class="page-header-image" data-parallax="true" style="background-image: url('images/cc-bg-1.jpg');"></div>
   <div class="container">
 	<div class="content-center">
-	  <div class="cc-profile-image"><a href="#"><img src="images/anthony.jpg" alt="Image"/></a></div>
-	  <div class="h2 title">Anthony Barnett</div>
-	  <p class="category text-white">Web Developer, Graphic Designer,  Photographer</p><a class="btn btn-primary smooth-scroll mr-2" href="#contact" data-aos="zoom-in" data-aos-anchor="data-aos-anchor">Hire Me</a><a class="btn btn-primary" href="#" data-aos="zoom-in" data-aos-anchor="data-aos-anchor">Download CV</a>
+	  <div class="cc-profile-image"><a href="#"><img src="images/Mengwei.jpg" alt="Image"/></a></div>
+	  <div class="h2 title">Mengwei Zhang</div>
+	  <p class="category text-white">Robotics, University of Pennsylvania</p><a class="btn btn-primary smooth-scroll mr-2" href="#contact" data-aos="zoom-in" data-aos-anchor="data-aos-anchor">Hire Me</a><a class="btn btn-primary" href="#" data-aos="zoom-in" data-aos-anchor="data-aos-anchor">Download CV</a>
 	</div>
   </div>
   <div class="section">
@@ -61,8 +61,9 @@
 	<div class="col-lg-6 col-md-12">
 	  <div class="card-body">
 		<div class="h4 mt-0 title">About</div>
-		<p>Hello! I am Anthony Barnett. Web Developer, Graphic Designer and Photographer.</p>
-		<p>Creative CV is a HTML resume template for professionals. Built with Bootstrap 4, Now UI Kit and FontAwesome, this modern and responsive design template is perfect to showcase your portfolio, skills and experience. <a href="#" target="_blank">Learn More</a></p>
+		<p>I am Mengwei Zhang, a second-year Master's student in Robotics at the University of Pennsylvania.</p>
+		  <p>I acquired my Bachelor's degree in Mechanical Engineering at Xi'an Jiaotong University with the ranking 1/234.</p>
+		<p>My research area includes Robotics, Machine Learning, Deep Learning, Computer Vision and Computer Graphics.</p>
 	  </div>
 	</div>
 	<div class="col-lg-6 col-md-12">
@@ -74,19 +75,19 @@
 		</div>
 		<div class="row mt-3">
 		  <div class="col-sm-4"><strong class="text-uppercase">Email:</strong></div>
-		  <div class="col-sm-8">anthony@company.com</div>
+		  <div class="col-sm-8">jackzh@seas.upenn.edu</div>
 		</div>
 		<div class="row mt-3">
 		  <div class="col-sm-4"><strong class="text-uppercase">Phone:</strong></div>
-		  <div class="col-sm-8">+1718-111-0011</div>
+		  <div class="col-sm-8">+1 215-578-0220</div>
 		</div>
 		<div class="row mt-3">
 		  <div class="col-sm-4"><strong class="text-uppercase">Address:</strong></div>
-		  <div class="col-sm-8">140, City Center, New York, U.S.A</div>
+		  <div class="col-sm-8">3810, Hamilton St., Philadelphia, PA-19104</div>
 		</div>
 		<div class="row mt-3">
 		  <div class="col-sm-4"><strong class="text-uppercase">Language:</strong></div>
-		  <div class="col-sm-8">English, German, French</div>
+		  <div class="col-sm-8">English, Mandarin Chinese</div>
 		</div>
 	  </div>
 	</div>
@@ -101,14 +102,14 @@
   <div class="card-body">
 	<div class="row">
 	  <div class="col-md-6">
-		<div class="progress-container progress-primary"><span class="progress-badge">HTML</span>
+		<div class="progress-container progress-primary"><span class="progress-badge">C/C++</span>
 		  <div class="progress">
 			<div class="progress-bar progress-bar-primary" data-aos="progress-full" data-aos-offset="10" data-aos-duration="2000" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 80%;"></div><span class="progress-value">80%</span>
 		  </div>
 		</div>
 	  </div>
 	  <div class="col-md-6">
-		<div class="progress-container progress-primary"><span class="progress-badge">CSS</span>
+		<div class="progress-container progress-primary"><span class="progress-badge">Machine Learning/Deep Learning</span>
 		  <div class="progress">
 			<div class="progress-bar progress-bar-primary" data-aos="progress-full" data-aos-offset="10" data-aos-duration="2000" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 75%;"></div><span class="progress-value">75%</span>
 		  </div>
@@ -117,30 +118,30 @@
 	</div>
 	<div class="row">
 	  <div class="col-md-6">
-		<div class="progress-container progress-primary"><span class="progress-badge">JavaScript</span>
+		<div class="progress-container progress-primary"><span class="progress-badge">GNU/Linux</span>
 		  <div class="progress">
-			<div class="progress-bar progress-bar-primary" data-aos="progress-full" data-aos-offset="10" data-aos-duration="2000" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 60%;"></div><span class="progress-value">60%</span>
+			<div class="progress-bar progress-bar-primary" data-aos="progress-full" data-aos-offset="10" data-aos-duration="2000" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 70%;"></div><span class="progress-value">70%</span>
 		  </div>
 		</div>
 	  </div>
 	  <div class="col-md-6">
-		<div class="progress-container progress-primary"><span class="progress-badge">SASS</span>
+		<div class="progress-container progress-primary"><span class="progress-badge">Python</span>
 		  <div class="progress">
-			<div class="progress-bar progress-bar-primary" data-aos="progress-full" data-aos-offset="10" data-aos-duration="2000" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 60%;"></div><span class="progress-value">60%</span>
+			<div class="progress-bar progress-bar-primary" data-aos="progress-full" data-aos-offset="10" data-aos-duration="2000" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 90%;"></div><span class="progress-value">90%</span>
 		  </div>
 		</div>
 	  </div>
 	</div>
 	<div class="row">
 	  <div class="col-md-6">
-		<div class="progress-container progress-primary"><span class="progress-badge">Bootstrap</span>
+		<div class="progress-container progress-primary"><span class="progress-badge">Computer Vision</span>
 		  <div class="progress">
 			<div class="progress-bar progress-bar-primary" data-aos="progress-full" data-aos-offset="10" data-aos-duration="2000" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 75%;"></div><span class="progress-value">75%</span>
 		  </div>
 		</div>
 	  </div>
 	  <div class="col-md-6">
-		<div class="progress-container progress-primary"><span class="progress-badge">Photoshop</span>
+		<div class="progress-container progress-primary"><span class="progress-badge">MATLAB</span>
 		  <div class="progress">
 			<div class="progress-bar progress-bar-primary" data-aos="progress-full" data-aos-offset="10" data-aos-duration="2000" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 70%;"></div><span class="progress-value">70%</span>
 		  </div>
@@ -171,33 +172,34 @@
 	  <div class="row">
 		<div class="col-md-6">
 		  <div class="cc-porfolio-image img-raised" data-aos="fade-up" data-aos-anchor-placement="top-bottom"><a href="#web-development">
-			  <figure class="cc-effect"><img src="images/project-1.jpg" alt="Image"/>
+			  <figure class="cc-effect"><img src="images/Lawn_management_robot.jpg" alt="Image"/>
 				<figcaption>
 				  <div class="h4">Recent Project</div>
-				  <p>Web Development</p>
+				  <p>Lawn Management Robot Based on Deep Learning and Reinforcement Learning</p>
 				</figcaption>
 			  </figure></a></div>
 		  <div class="cc-porfolio-image img-raised" data-aos="fade-up" data-aos-anchor-placement="top-bottom"><a href="#web-development">
-			  <figure class="cc-effect"><img src="images/project-2.jpg" alt="Image"/>
+			  <figure class="cc-effect"><img src="images/quori.png" alt="Image"/>
 				<figcaption>
-				  <div class="h4">Startup Project</div>
-				  <p>Web Development</p>
+				  <div class="h4">Project</div>
+				  <p>Quori Research on Face Tracking, Emotion Detection and Rendering</p>
 				</figcaption>
 			  </figure></a></div>
 		</div>
 		<div class="col-md-6">
 		  <div class="cc-porfolio-image img-raised" data-aos="fade-up" data-aos-anchor-placement="top-bottom"><a href="#web-development">
-			  <figure class="cc-effect"><img src="images/project-3.jpg" alt="Image"/>
+			  <figure class="cc-effect"><img src="images/hbi.jpg" alt="Image"/>
 				<figcaption>
-				  <div class="h4">Food Order Project</div>
-				  <p>Web Development</p>
+				  <div class="h4">Undergraduate Thesis</div>
+				  <p>Hybrid Brain-Computer Interface(BCI) Technology in Patient Rehabilitation Application</p>
 				</figcaption>
 			  </figure></a></div>
 		  <div class="cc-porfolio-image img-raised" data-aos="fade-up" data-aos-anchor-placement="top-bottom"><a href="#web-development">
-			  <figure class="cc-effect"><img src="images/project-4.jpg" alt="Image"/>
+			  <figure class="cc-effect"><img src="images/餐厅清道夫.png" alt="Image"/>
 				<figcaption>
-				  <div class="h4">Web Advertising Project</div>
-				  <p>Web Development</p>
+				  <div class="h4">Project</div>
+				  <p>Research on an autonomous robot with functions of tableware collection, table cleaning, leftovers
+					  removal, tableware classification</p>
 				</figcaption>
 			  </figure></a></div>
 		</div>
@@ -392,55 +394,55 @@
 </div>
 </div>
 </div>
-<div class="section" id="reference">
-<div class="container cc-reference">
-<div class="h4 mb-4 text-center title">References</div>
-<div class="card" data-aos="zoom-in">
-  <div class="carousel slide" id="cc-Indicators" data-ride="carousel">
-	<ol class="carousel-indicators">
-	  <li class="active" data-target="#cc-Indicators" data-slide-to="0"></li>
-	  <li data-target="#cc-Indicators" data-slide-to="1"></li>
-	  <li data-target="#cc-Indicators" data-slide-to="2"></li>
-	</ol>
-	<div class="carousel-inner">
-	  <div class="carousel-item active">
-		<div class="row">
-		  <div class="col-lg-2 col-md-3 cc-reference-header"><img src="images/reference-image-1.jpg" alt="Image"/>
-			<div class="h5 pt-2">Aiyana</div>
-			<p class="category">CEO / WEBM</p>
-		  </div>
-		  <div class="col-lg-10 col-md-9">
-			<p> Habitasse venenatis commodo tempor eleifend arcu sociis sollicitudin ante pulvinar ad, est porta cras erat ullamcorper volutpat metus duis platea convallis, tortor primis ac quisque etiam luctus nisl nullam fames. Ligula purus suscipit tempus nascetur curabitur donec nam ullamcorper, laoreet nullam mauris dui aptent facilisis neque elementum ac, risus semper felis parturient fringilla rhoncus eleifend.</p>
-		  </div>
-		</div>
-	  </div>
-	  <div class="carousel-item">
-		<div class="row">
-		  <div class="col-lg-2 col-md-3 cc-reference-header"><img src="images/reference-image-2.jpg" alt="Image"/>
-			<div class="h5 pt-2">Braiden</div>
-			<p class="category">CEO / Creativem</p>
-		  </div>
-		  <div class="col-lg-10 col-md-9">
-			<p> Habitasse venenatis commodo tempor eleifend arcu sociis sollicitudin ante pulvinar ad, est porta cras erat ullamcorper volutpat metus duis platea convallis, tortor primis ac quisque etiam luctus nisl nullam fames. Ligula purus suscipit tempus nascetur curabitur donec nam ullamcorper, laoreet nullam mauris dui aptent facilisis neque elementum ac, risus semper felis parturient fringilla rhoncus eleifend.</p>
-		  </div>
-		</div>
-	  </div>
-	  <div class="carousel-item">
-		<div class="row">
-		  <div class="col-lg-2 col-md-3 cc-reference-header"><img src="images/reference-image-3.jpg" alt="Image"/>
-			<div class="h5 pt-2">Alexander</div>
-			<p class="category">CEO / Webnote</p>
-		  </div>
-		  <div class="col-lg-10 col-md-9">
-			<p> Habitasse venenatis commodo tempor eleifend arcu sociis sollicitudin ante pulvinar ad, est porta cras erat ullamcorper volutpat metus duis platea convallis, tortor primis ac quisque etiam luctus nisl nullam fames. Ligula purus suscipit tempus nascetur curabitur donec nam ullamcorper, laoreet nullam mauris dui aptent facilisis neque elementum ac, risus semper felis parturient fringilla rhoncus eleifend.</p>
-		  </div>
-		</div>
-	  </div>
-	</div>
-  </div>
-</div>
-</div>
-</div>
+<!--<div class="section" id="reference">-->
+<!--<div class="container cc-reference">-->
+<!--<div class="h4 mb-4 text-center title">References</div>-->
+<!--<div class="card" data-aos="zoom-in">-->
+<!--  <div class="carousel slide" id="cc-Indicators" data-ride="carousel">-->
+<!--	<ol class="carousel-indicators">-->
+<!--	  <li class="active" data-target="#cc-Indicators" data-slide-to="0"></li>-->
+<!--	  <li data-target="#cc-Indicators" data-slide-to="1"></li>-->
+<!--	  <li data-target="#cc-Indicators" data-slide-to="2"></li>-->
+<!--	</ol>-->
+<!--	<div class="carousel-inner">-->
+<!--	  <div class="carousel-item active">-->
+<!--		<div class="row">-->
+<!--		  <div class="col-lg-2 col-md-3 cc-reference-header"><img src="images/reference-image-1.jpg" alt="Image"/>-->
+<!--			<div class="h5 pt-2">Aiyana</div>-->
+<!--			<p class="category">CEO / WEBM</p>-->
+<!--		  </div>-->
+<!--		  <div class="col-lg-10 col-md-9">-->
+<!--			<p> Habitasse venenatis commodo tempor eleifend arcu sociis sollicitudin ante pulvinar ad, est porta cras erat ullamcorper volutpat metus duis platea convallis, tortor primis ac quisque etiam luctus nisl nullam fames. Ligula purus suscipit tempus nascetur curabitur donec nam ullamcorper, laoreet nullam mauris dui aptent facilisis neque elementum ac, risus semper felis parturient fringilla rhoncus eleifend.</p>-->
+<!--		  </div>-->
+<!--		</div>-->
+<!--	  </div>-->
+<!--	  <div class="carousel-item">-->
+<!--		<div class="row">-->
+<!--		  <div class="col-lg-2 col-md-3 cc-reference-header"><img src="images/reference-image-2.jpg" alt="Image"/>-->
+<!--			<div class="h5 pt-2">Braiden</div>-->
+<!--			<p class="category">CEO / Creativem</p>-->
+<!--		  </div>-->
+<!--		  <div class="col-lg-10 col-md-9">-->
+<!--			<p> Habitasse venenatis commodo tempor eleifend arcu sociis sollicitudin ante pulvinar ad, est porta cras erat ullamcorper volutpat metus duis platea convallis, tortor primis ac quisque etiam luctus nisl nullam fames. Ligula purus suscipit tempus nascetur curabitur donec nam ullamcorper, laoreet nullam mauris dui aptent facilisis neque elementum ac, risus semper felis parturient fringilla rhoncus eleifend.</p>-->
+<!--		  </div>-->
+<!--		</div>-->
+<!--	  </div>-->
+<!--	  <div class="carousel-item">-->
+<!--		<div class="row">-->
+<!--		  <div class="col-lg-2 col-md-3 cc-reference-header"><img src="images/reference-image-3.jpg" alt="Image"/>-->
+<!--			<div class="h5 pt-2">Alexander</div>-->
+<!--			<p class="category">CEO / Webnote</p>-->
+<!--		  </div>-->
+<!--		  <div class="col-lg-10 col-md-9">-->
+<!--			<p> Habitasse venenatis commodo tempor eleifend arcu sociis sollicitudin ante pulvinar ad, est porta cras erat ullamcorper volutpat metus duis platea convallis, tortor primis ac quisque etiam luctus nisl nullam fames. Ligula purus suscipit tempus nascetur curabitur donec nam ullamcorper, laoreet nullam mauris dui aptent facilisis neque elementum ac, risus semper felis parturient fringilla rhoncus eleifend.</p>-->
+<!--		  </div>-->
+<!--		</div>-->
+<!--	  </div>-->
+<!--	</div>-->
+<!--  </div>-->
+<!--</div>-->
+<!--</div>-->
+<!--</div>-->
 <div class="section" id="contact">
 <div class="cc-contact-information" style="background-image: url('images/staticmap.png');">
 <div class="container">
@@ -493,11 +495,11 @@
 			<div class="col-md-6">
 			  <div class="card-body">
 				<p class="mb-0"><strong>Address </strong></p>
-				<p class="pb-2">140, City Center, New York, U.S.A</p>
+				<p class="pb-2">3810 Hamilton St., Philadelphia, PA-19104</p>
 				<p class="mb-0"><strong>Phone</strong></p>
-				<p class="pb-2">+1718-111-0011</p>
+				<p class="pb-2">+1 215-578-0220</p>
 				<p class="mb-0"><strong>Email</strong></p>
-				<p>anthony@company.com</p>
+				<p>jackzh@seas.upenn.edu</p>
 			  </div>
 			</div>
 		  </div>
@@ -511,10 +513,10 @@
 </div>
 <footer class="footer">
   <div class="container text-center"><a class="cc-facebook btn btn-link" href="#"><i class="fa fa-facebook fa-2x " aria-hidden="true"></i></a><a class="cc-twitter btn btn-link " href="#"><i class="fa fa-twitter fa-2x " aria-hidden="true"></i></a><a class="cc-google-plus btn btn-link" href="#"><i class="fa fa-google-plus fa-2x" aria-hidden="true"></i></a><a class="cc-instagram btn btn-link" href="#"><i class="fa fa-instagram fa-2x " aria-hidden="true"></i></a></div>
-  <div class="h4 title text-center">Anthony Barnett</div>
-  <div class="text-center text-muted">
-	<p>Copyright &copy; 2019.Company name All rights reserved.<a target="_blank" href="http://sc.chinaz.com/moban/">&#x7F51;&#x9875;&#x6A21;&#x677F;</a></p>
-  </div>
+  <div class="h4 title text-center">Mengwei Zhang</div>
+<!--  <div class="text-center text-muted">-->
+<!--	<p>Copyright &copy; 2019.Company name All rights reserved.<a target="_blank" href="http://sc.chinaz.com/moban/">&#x7F51;&#x9875;&#x6A21;&#x677F;</a></p>-->
+<!--  </div>-->
 </footer>
 <script src="js/core/jquery.3.2.1.min.js"></script>
 <script src="js/core/popper.min.js"></script>
