Finished the first version of my personal webpage

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 			<li class="nav-item"><a class="nav-link smooth-scroll" href="#about">About</a></li>
 			<li class="nav-item"><a class="nav-link smooth-scroll" href="#skill">Skills</a></li>
 			<li class="nav-item"><a class="nav-link smooth-scroll" href="#portfolio">Portfolio</a></li>
-			<li class="nav-item"><a class="nav-link smooth-scroll" href="#experience">Experience</a></li>
+			<li class="nav-item"><a class="nav-link smooth-scroll" href="#experience">Research Experience</a></li>
 			<li class="nav-item"><a class="nav-link smooth-scroll" href="#contact">Contact</a></li>
 		  </ul>
 		</div>
@@ -211,33 +211,38 @@
 	  <div class="row">
 		<div class="col-md-6">
 		  <div class="cc-porfolio-image img-raised" data-aos="fade-up" data-aos-anchor-placement="top-bottom"><a href="#graphic-design">
-			  <figure class="cc-effect"><img src="images/graphic-design-1.jpg" alt="Image"/>
+			  <figure class="cc-effect"><img src="images/国家发明专利.png" alt="Image"/>
 				<figcaption>
-				  <div class="h4">Triangle Pattern</div>
-				  <p>Graphic Design</p>
+				  <div class="h4">Chinese National Patent 1</div>
+				  <p>A tableware collection, cleaning and sorting robot system</p>
 				</figcaption>
 			  </figure></a></div>
 		  <div class="cc-porfolio-image img-raised" data-aos="fade-up" data-aos-anchor-placement="top-bottom"><a href="#graphic-design">
-			  <figure class="cc-effect"><img src="images/graphic-design-2.jpg" alt="Image"/>
+			  <figure class="cc-effect"><img src="images/国家发明专利2.png" alt="Image"/>
 				<figcaption>
-				  <div class="h4">Abstract Umbrella</div>
-				  <p>Graphic Design</p>
+				  <div class="h4">Chinese National Patent 2</div>
+				  <p>A new phase-change heat storage unit based on the ultrasonic strengthening method
+					  of new particles in porous media</p>
 				</figcaption>
 			  </figure></a></div>
 		</div>
 		<div class="col-md-6">
 		  <div class="cc-porfolio-image img-raised" data-aos="fade-up" data-aos-anchor-placement="top-bottom"><a href="#graphic-design">
-			  <figure class="cc-effect"><img src="images/graphic-design-3.jpg" alt="Image"/>
+			  <figure class="cc-effect"><img src="images/m_winner.png" alt="Image"/>
 				<figcaption>
-				  <div class="h4">Cube Surface Texture</div>
-				  <p>Graphic Design</p>
+				  <div class="h4">ICM Competition</div>
+				  <p>Meritorious Winner</p>
 				</figcaption>
 			  </figure></a></div>
 		  <div class="cc-porfolio-image img-raised" data-aos="fade-up" data-aos-anchor-placement="top-bottom"><a href="#graphic-design">
-			  <figure class="cc-effect"><img src="images/graphic-design-4.jpg" alt="Image"/>
+			  <figure class="cc-effect"><img src="images/awards.png" alt="Image"/>
 				<figcaption>
-				  <div class="h4">Abstract Line</div>
-				  <p>Graphic Design</p>
+				  <div class="h4">Awards</div>
+				  <p>National Scholarships of China, Proportion: 230/3000</p>
+                    <p>Pacemaker to Excellent Students of Xian Jiaotong University, Proportion: 0.06%</p>
+					<p>Fast Auto Drive Special Level Scholarship, Proportion: 1/234</p>
+					<p>Schneider Electric SA First Prize Scholarship</p>
+					<p>Etc.</p>
 				</figcaption>
 			  </figure></a></div>
 		</div>
@@ -249,33 +254,33 @@
 	  <div class="row">
 		<div class="col-md-6">
 		  <div class="cc-porfolio-image img-raised" data-aos="fade-up" data-aos-anchor-placement="top-bottom"><a href="#Photography">
-			  <figure class="cc-effect"><img src="images/photography-1.jpg" alt="Image"/>
+			  <figure class="cc-effect"><img src="images/学生标兵.JPG" alt="Image"/>
 				<figcaption>
-				  <div class="h4">Photoshoot</div>
-				  <p>Photography</p>
+				  <div class="h4">Awarded as Pacemaker to Excellent Students by Shuguo Wang, the Present of Xi'an Jiaotong University</div>
+				  <p></p>
 				</figcaption>
 			  </figure></a></div>
 		  <div class="cc-porfolio-image img-raised" data-aos="fade-up" data-aos-anchor-placement="top-bottom"><a href="#Photography">
-			  <figure class="cc-effect"><img src="images/photography-3.jpg" alt="Image"/>
+			  <figure class="cc-effect"><img src="images/georgia_tech.JPG" alt="Image"/>
 				<figcaption>
-				  <div class="h4">Wedding Photoshoot</div>
-				  <p>Photography</p>
+				  <div class="h4">Georgia Tech Exchange Program</div>
+				  <p></p>
 				</figcaption>
 			  </figure></a></div>
 		</div>
 		<div class="col-md-6">
 		  <div class="cc-porfolio-image img-raised" data-aos="fade-up" data-aos-anchor-placement="top-bottom"><a href="#Photography">
-			  <figure class="cc-effect"><img src="images/photography-2.jpg" alt="Image"/>
+			  <figure class="cc-effect"><img src="images/marathon.jpg" alt="Image"/>
 				<figcaption>
-				  <div class="h4">Beach Photoshoot</div>
-				  <p>Photography</p>
+				  <div class="h4">Marathon Competition</div>
+				  <p></p>
 				</figcaption>
 			  </figure></a></div>
 		  <div class="cc-porfolio-image img-raised" data-aos="fade-up" data-aos-anchor-placement="top-bottom"><a href="#Photography">
-			  <figure class="cc-effect"><img src="images/photography-4.jpg" alt="Image"/>
+			  <figure class="cc-effect"><img src="images/volunteer.jpg" alt="Image"/>
 				<figcaption>
-				  <div class="h4">Nature Photoshoot</div>
-				  <p>Photography</p>
+				  <div class="h4">Volunteer Programs</div>
+				  <p></p>
 				</figcaption>
 			  </figure></a></div>
 		</div>
@@ -287,19 +292,19 @@
 </div>
 <div class="section" id="experience">
 <div class="container cc-experience">
-<div class="h4 text-center mb-4 title">Work Experience</div>
+<div class="h4 text-center mb-4 title">Research Experience</div>
 <div class="card">
   <div class="row">
 	<div class="col-md-3 bg-primary" data-aos="fade-right" data-aos-offset="50" data-aos-duration="500">
 	  <div class="card-body cc-experience-header">
-		<p>March 2016 - Present</p>
-		<div class="h5">CreativeM</div>
+		<p>October 2019 - Present</p>
+		<div class="h5">GRASP Lab, Upenn</div>
 	  </div>
 	</div>
 	<div class="col-md-9" data-aos="fade-left" data-aos-offset="50" data-aos-duration="500">
 	  <div class="card-body">
-		<div class="h5">Front End Developer</div>
-		<p>Euismod massa scelerisque suspendisse fermentum habitant vitae ullamcorper magna quam iaculis, tristique sapien taciti mollis interdum sagittis libero nunc inceptos tellus, hendrerit vel eleifend primis lectus quisque cubilia sed mauris. Lacinia porta vestibulum diam integer quisque eros pulvinar curae, curabitur feugiat arcu vivamus parturient aliquet laoreet at, eu etiam pretium molestie ultricies sollicitudin dui.</p>
+		<div class="h5">Lawn Management Robot Based on Deep Learning and Reinforcement Learning</div>
+		<p>Researched on robot navigation using reinforcement learning method, object(trash) detection using single-shot detector(SSD), semantic segmentation using Mask-RCNN, object gripping based on reinforcement learning and robotic arm control under ROS and MoveIt.</p>
 	  </div>
 	</div>
   </div>
@@ -308,14 +313,14 @@
   <div class="row">
 	<div class="col-md-3 bg-primary" data-aos="fade-right" data-aos-offset="50" data-aos-duration="500">
 	  <div class="card-body cc-experience-header">
-		<p>April 2014 - March 2016</p>
-		<div class="h5">WebNote</div>
+		<p>March 2019 - September 2019</p>
+		<div class="h5">GRASP Lab, Upenn</div>
 	  </div>
 	</div>
 	<div class="col-md-9" data-aos="fade-left" data-aos-offset="50" data-aos-duration="500">
 	  <div class="card-body">
-		<div class="h5">Web Developer</div>
-		<p>Euismod massa scelerisque suspendisse fermentum habitant vitae ullamcorper magna quam iaculis, tristique sapien taciti mollis interdum sagittis libero nunc inceptos tellus, hendrerit vel eleifend primis lectus quisque cubilia sed mauris. Lacinia porta vestibulum diam integer quisque eros pulvinar curae, curabitur feugiat arcu vivamus parturient aliquet laoreet at, eu etiam pretium molestie ultricies sollicitudin dui.</p>
+		<div class="h5">Quori Research on Face Tracking, Emotion Detection and Rendering</div>
+		<p>Researched on the application of computer vision and deep learning. Based on OpenCV, Finished the algorithm of human face tracking based on KCF Filter, emotion detection by TensorFlow. Completed the algorithm of spcacial transformation from 2D image plane to 3D shperical screen and the code of rendering different images according to the location and emotion of the person using OpenGL.</p>
 	  </div>
 	</div>
   </div>
@@ -324,14 +329,16 @@
   <div class="row">
 	<div class="col-md-3 bg-primary" data-aos="fade-right" data-aos-offset="50" data-aos-duration="500">
 	  <div class="card-body cc-experience-header">
-		<p>April 2013 - February 2014</p>
-		<div class="h5">WEBM</div>
+		<p>October 2017 - June 2018</p>
+		<div class="h5">Institute of intelligent measurement and instrumentation</div>
 	  </div>
 	</div>
 	<div class="col-md-9" data-aos="fade-left" data-aos-offset="50" data-aos-duration="500">
 	  <div class="card-body">
-		<div class="h5">Intern</div>
-		<p>Euismod massa scelerisque suspendisse fermentum habitant vitae ullamcorper magna quam iaculis, tristique sapien taciti mollis interdum sagittis libero nunc inceptos tellus, hendrerit vel eleifend primis lectus quisque cubilia sed mauris. Lacinia porta vestibulum diam integer quisque eros pulvinar curae, curabitur feugiat arcu vivamus parturient aliquet laoreet at, eu etiam pretium molestie ultricies sollicitudin dui.</p>
+		<div class="h5">Hybrid Brain-Computer Interface(HBCI) Technology in Patient Rehabilitation Application</div>
+		<p>Researched on the working principle of the brain and collecting and processing EEG signals. It would help the disabled or the patient complete the rehabilitation process with mechanical aids.</p>
+		  <p>Set up the experimental platform and carried out experiments with 20 suitable volunteers.</p>
+		  <p>Established Asynchronous Hybrid Brain-Computer Interface Based on SSVEP and SSAEP. Optimized the algorithm of feature extraction using FFT and CCA. Wrote an application to control the mouse cursor through the EEG signal.</p>
 	  </div>
 	</div>
   </div>
@@ -345,15 +352,15 @@
   <div class="row">
 	<div class="col-md-3 bg-primary" data-aos="fade-right" data-aos-offset="50" data-aos-duration="500">
 	  <div class="card-body cc-education-header">
-		<p>2013 - 2015</p>
+		<p>2018 - 2020</p>
 		<div class="h5">Master's Degree</div>
 	  </div>
 	</div>
 	<div class="col-md-9" data-aos="fade-left" data-aos-offset="50" data-aos-duration="500">
 	  <div class="card-body">
-		<div class="h5">Master of Information Technology</div>
-		<p class="category">University of Computer Science</p>
-		<p>Euismod massa scelerisque suspendisse fermentum habitant vitae ullamcorper magna quam iaculis, tristique sapien taciti mollis interdum sagittis libero nunc inceptos tellus, hendrerit vel eleifend primis lectus quisque cubilia sed mauris. Lacinia porta vestibulum diam integer quisque eros pulvinar curae, curabitur feugiat arcu vivamus parturient aliquet laoreet at, eu etiam pretium molestie ultricies sollicitudin dui.</p>
+		<div class="h5">Master of Robotics</div>
+		<p class="category">University of Pennsylvania</p>
+		<p>I acquired my Master's Degree of Robotics at University of Pennsylvania.</p>
 	  </div>
 	</div>
   </div>
@@ -362,36 +369,20 @@
   <div class="row">
 	<div class="col-md-3 bg-primary" data-aos="fade-right" data-aos-offset="50" data-aos-duration="500">
 	  <div class="card-body cc-education-header">
-		<p>2009 - 2013</p>
+		<p>2014 - 2018</p>
 		<div class="h5">Bachelor's Degree</div>
 	  </div>
 	</div>
 	<div class="col-md-9" data-aos="fade-left" data-aos-offset="50" data-aos-duration="500">
 	  <div class="card-body">
-		<div class="h5">Bachelor of Computer Science</div>
-		<p class="category">University of Computer Science</p>
-		<p>Euismod massa scelerisque suspendisse fermentum habitant vitae ullamcorper magna quam iaculis, tristique sapien taciti mollis interdum sagittis libero nunc inceptos tellus, hendrerit vel eleifend primis lectus quisque cubilia sed mauris. Lacinia porta vestibulum diam integer quisque eros pulvinar curae, curabitur feugiat arcu vivamus parturient aliquet laoreet at, eu etiam pretium molestie ultricies sollicitudin dui.</p>
+		<div class="h5">Bachelor of Mechanical Engineering</div>
+		<p class="category">Xi'an Jiaotong University</p>
+		<p>I acquired my Bachelor's Degree of Mechanical Engineering at Xi'an Jiaotong Unviversity with the ranking of 1/234</p>
 	  </div>
 	</div>
   </div>
 </div>
-<div class="card">
-  <div class="row">
-	<div class="col-md-3 bg-primary" data-aos="fade-right" data-aos-offset="50" data-aos-duration="500">
-	  <div class="card-body cc-education-header">
-		<p>2007 - 2009</p>
-		<div class="h5">High School</div>
-	  </div>
-	</div>
-	<div class="col-md-9" data-aos="fade-left" data-aos-offset="50" data-aos-duration="500">
-	  <div class="card-body">
-		<div class="h5">Science and Mathematics</div>
-		<p class="category">School of Secondary board</p>
-		<p>Euismod massa scelerisque suspendisse fermentum habitant vitae ullamcorper magna quam iaculis, tristique sapien taciti mollis interdum sagittis libero nunc inceptos tellus, hendrerit vel eleifend primis lectus quisque cubilia sed mauris. Lacinia porta vestibulum diam integer quisque eros pulvinar curae, curabitur feugiat arcu vivamus parturient aliquet laoreet at, eu etiam pretium molestie ultricies sollicitudin dui.</p>
-	  </div>
-	</div>
-  </div>
-</div>
+
 </div>
 </div>
 <!--<div class="section" id="reference">-->
