--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <div class="profile-page sidebar-collapse">
 	<nav class="navbar navbar-expand-lg fixed-top navbar-transparent bg-primary" color-on-scroll="400">
 	  <div class="container">
-		<div class="navbar-translate"><a class="navbar-brand" href="#" rel="tooltip">Creative CV</a>
+		<div class="navbar-translate"><a class="navbar-brand" href="#" rel="tooltip">Mengwei Zhang</a>
 		  <button class="navbar-toggler navbar-toggler" type="button" data-toggle="collapse" data-target="#navigation" aria-controls="navigation" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-bar bar1"></span><span class="navbar-toggler-bar bar2"></span><span class="navbar-toggler-bar bar3"></span></button>
 		</div>
 		<div class="collapse navbar-collapse justify-content-end" id="navigation">
@@ -43,7 +43,7 @@
 	<div class="content-center">
 	  <div class="cc-profile-image"><a href="#"><img src="images/Mengwei.jpg" alt="Image"/></a></div>
 	  <div class="h2 title">Mengwei Zhang</div>
-	  <p class="category text-white">Robotics, University of Pennsylvania</p><a class="btn btn-primary smooth-scroll mr-2" href="#contact" data-aos="zoom-in" data-aos-anchor="data-aos-anchor">Hire Me</a><a class="btn btn-primary" href="#" data-aos="zoom-in" data-aos-anchor="data-aos-anchor">Download CV</a>
+	  <p class="category text-white">Robotics, University of Pennsylvania</p><a class="btn btn-primary smooth-scroll mr-2" href="#contact" data-aos="zoom-in" data-aos-anchor="data-aos-anchor">Hire Me</a><a class="btn btn-primary" href="resume/Resume_Mengwei_Zhang.pdf" data-aos="zoom-in" data-aos-anchor="data-aos-anchor">Download CV</a>
 	</div>
   </div>
   <div class="section">
